--- a/unk-planet-walker.vcxproj
+++ b/unk-planet-walker.vcxproj
@@ -143,6 +143,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\renderer\materials\default\ColorMaterial.cpp" />
+    <ClCompile Include="src\renderer\Camera.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\renderer\shaders\Shader.cpp" />
     <ClCompile Include="src\renderer\Renderable2D.cpp" />
@@ -150,12 +152,16 @@
     <ClCompile Include="src\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\renderer\materials\default\ColorMaterial.h" />
+    <ClInclude Include="src\renderer\materials\Material.h" />
+    <ClInclude Include="src\renderer\Camera.h" />
     <ClInclude Include="src\renderer\shaders\Shader.h" />
     <ClInclude Include="src\renderer\Renderable2D.h" />
     <ClInclude Include="src\renderer\IRenderable.h" />
     <ClInclude Include="src\renderer\Renderer.h" />
     <ClInclude Include="src\InputManager.h" />
     <ClInclude Include="src\utils\GLIncludes.h" />
+    <ClInclude Include="src\utils\Randomizer.h" />
     <ClInclude Include="src\Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
