--- a/unk-planet-walker.vcxproj
+++ b/unk-planet-walker.vcxproj
@@ -143,14 +143,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\application\Application.cpp" />
     <ClCompile Include="src\renderer\materials\default\DynamicObjectMaterial.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\renderer\shaders\Shader.cpp" />
     <ClCompile Include="src\renderer\Renderable2D.cpp" />
     <ClCompile Include="src\renderer\Renderer.cpp" />
-    <ClCompile Include="src\Window.cpp" />
+    <ClCompile Include="src\application\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\application\Application.h" />
     <ClInclude Include="src\renderer\materials\default\DynamicObjectMaterial.h" />
     <ClInclude Include="src\renderer\materials\Material.h" />
     <ClInclude Include="src\renderer\Camera.h" />
@@ -158,10 +160,10 @@
     <ClInclude Include="src\renderer\Renderable2D.h" />
     <ClInclude Include="src\renderer\IRenderable.h" />
     <ClInclude Include="src\renderer\Renderer.h" />
-    <ClInclude Include="src\InputManager.h" />
+    <ClInclude Include="src\application\InputManager.h" />
     <ClInclude Include="src\utils\GLIncludes.h" />
     <ClInclude Include="src\utils\Randomizer.h" />
-    <ClInclude Include="src\Window.h" />
+    <ClInclude Include="src\application\Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
