batch renderer added, ui layer added WIP

--- a/unk-planet-walker.vcxproj
+++ b/unk-planet-walker.vcxproj
@@ -143,9 +143,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\renderer\materials\BatchMaterial.cpp" />
+    <ClCompile Include="src\renderer\materials\default\UIMaterial.cpp" />
+    <ClCompile Include="src\renderer\BatchRenderer.cpp" />
     <ClCompile Include="src\application\Application.cpp" />
     <ClCompile Include="src\renderer\materials\default\DynamicObjectMaterial.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="src\renderer\Renderable.cpp" />
     <ClCompile Include="src\renderer\shaders\Shader.cpp" />
     <ClCompile Include="src\renderer\Renderable2D.cpp" />
     <ClCompile Include="src\renderer\Renderer.cpp" />
@@ -153,15 +157,19 @@
     <ClCompile Include="src\renderer\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\renderer\materials\BatchMaterial.h" />
+    <ClInclude Include="src\renderer\materials\default\UIMaterial.h" />
+    <ClInclude Include="src\renderer\BatchRenderer.h" />
     <ClInclude Include="src\application\Application.h" />
     <ClInclude Include="src\renderer\materials\default\DynamicObjectMaterial.h" />
     <ClInclude Include="src\renderer\materials\Material.h" />
     <ClInclude Include="src\renderer\Camera.h" />
     <ClInclude Include="src\renderer\shaders\Shader.h" />
     <ClInclude Include="src\renderer\Renderable2D.h" />
-    <ClInclude Include="src\renderer\IRenderable.h" />
+    <ClInclude Include="src\renderer\Renderable.h" />
     <ClInclude Include="src\renderer\Renderer.h" />
     <ClInclude Include="src\application\InputManager.h" />
+    <ClInclude Include="src\renderer\Vertex.h" />
     <ClInclude Include="src\utils\GLIncludes.h" />
     <ClInclude Include="src\utils\Randomizer.h" />
     <ClInclude Include="src\application\Window.h" />
