--- a/unk-planet-walker.vcxproj
+++ b/unk-planet-walker.vcxproj
@@ -143,22 +143,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\renderer\RenderableFactory.cpp" />
+    <ClCompile Include="src\renderer\MeshFactory.cpp" />
     <ClCompile Include="src\renderer\materials\BatchMaterial.cpp" />
     <ClCompile Include="src\renderer\materials\default\UIMaterial.cpp" />
     <ClCompile Include="src\renderer\BatchRenderer.cpp" />
     <ClCompile Include="src\application\Application.cpp" />
     <ClCompile Include="src\renderer\materials\default\DynamicObjectMaterial.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="src\renderer\Renderable.cpp" />
+    <ClCompile Include="src\renderer\Mesh.cpp" />
     <ClCompile Include="src\renderer\shaders\Shader.cpp" />
-    <ClCompile Include="src\renderer\Renderable2D.cpp" />
+    <ClCompile Include="src\renderer\Renderable.cpp" />
     <ClCompile Include="src\renderer\Renderer.cpp" />
     <ClCompile Include="src\application\Window.cpp" />
     <ClCompile Include="src\renderer\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\renderer\RenderableFactory.h" />
+    <ClInclude Include="src\renderer\MeshFactory.h" />
     <ClInclude Include="src\renderer\materials\BatchMaterial.h" />
     <ClInclude Include="src\renderer\materials\default\UIMaterial.h" />
     <ClInclude Include="src\renderer\BatchRenderer.h" />
@@ -168,8 +168,8 @@
     <ClInclude Include="src\renderer\Camera.h" />
     <ClInclude Include="src\application\Layer.h" />
     <ClInclude Include="src\renderer\shaders\Shader.h" />
-    <ClInclude Include="src\renderer\Renderable2D.h" />
     <ClInclude Include="src\renderer\Renderable.h" />
+    <ClInclude Include="src\renderer\Mesh.h" />
     <ClInclude Include="src\renderer\Renderer.h" />
     <ClInclude Include="src\application\InputManager.h" />
     <ClInclude Include="src\renderer\Vertex.h" />
