map layer and basic wall generation added

--- a/unk-planet-walker.vcxproj
+++ b/unk-planet-walker.vcxproj
@@ -164,12 +164,14 @@
     <ClCompile Include="src\renderer\ui\Text.cpp" />
     <ClCompile Include="src\utils\GLUtils.cpp" />
     <ClCompile Include="src\renderer\TextureManager.cpp" />
+    <ClCompile Include="src\renderer\materials\default\StaticObjectsMaterial.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game\game-objects\Player.h" />
     <ClInclude Include="src\game\game-objects\Wall.h" />
     <ClInclude Include="src\game\GameObject.h" />
     <ClInclude Include="src\game\Level.h" />
+    <ClInclude Include="MapLayer.h" />
     <ClInclude Include="src\renderer\shaders\ShaderManager.h" />
     <ClInclude Include="src\renderer\font\Font.h" />
     <ClInclude Include="src\renderer\font\FontLoader.h" />
@@ -193,6 +195,7 @@
     <ClInclude Include="src\renderer\materials\default\TextureHolderMaterial.h" />
     <ClInclude Include="src\renderer\ui\Text.h" />
     <ClInclude Include="src\renderer\TextureManager.h" />
+    <ClInclude Include="src\renderer\materials\default\StaticObjectsMaterial.h" />
     <ClInclude Include="UILayer.h" />
     <ClInclude Include="src\utils\GLIncludes.h" />
     <ClInclude Include="src\utils\Randomizer.h" />
@@ -208,9 +211,9 @@
     <Image Include="assets\Protagonist.png" />
     <Image Include="assets\Rapid.png" />
     <Image Include="assets\Start.png" />
-    <Image Include="assets\Wall.png" />
-    <Image Include="assets\Wall2.png" />
     <Image Include="assets\WallSide.png" />
+    <Image Include="assets\WallSide2.png" />
+    <Image Include="assets\Wall.png" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="assets\fonts\m6x11.ttf" />
