--- a/unk-planet-walker.vcxproj
+++ b/unk-planet-walker.vcxproj
@@ -134,12 +134,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\lib\freeglut\include;C:\lib\stb-master;C:\lib\freetype-windows-binaries-master\include;C:\lib\glew-2.1.0\include;C:\lib\glfw-3.3.2.bin.WIN64\include;C:\lib\glm\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\lib\freetype-windows-binaries-master\win64;C:\lib\glew-2.1.0\lib\Release\x64;C:\lib\glfw-3.3.2.bin.WIN64\lib-vc2019;C:\lib\freeglut\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glew32.lib;glew32s.lib;glfw3.lib;glfw3dll.lib;freeglut.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
